--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-title: CGC
-#remote_theme: pages-themes/cayman@v0.2.0
-#plugins:
-#- jekyll-remote-theme # add this line to the plugins list if you already have one
-google_analytics:
+title: CGC - PORTFOLIO
+#google_analytics:
 theme: jekyll-theme-cayman
