--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: CGC - PORTFOLIO
-logo: /assets/img/profile_img.jpeg
-#google_analytics:
+description: Here is my portfolio GitHub, nice to meet you.
+show_downloads: false
+#logo: /assets/img/profile_img.jpeg
+google_analytics: true
 theme: jekyll-theme-cayman
