--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CGC - PORTFOLIO
-description: Here is my portfolio GitHub, nice to meet you.
+title: CG Centeno - PORTFOLIO
+description: Here is my portfolio GitHub, nice to meet you!.
 show_downloads: false
 #logo: /assets/img/profile_img.jpeg
 google_analytics: true
