--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: CG Centeno - PORTFOLIO
+title: CG CENTENO - PORTFOLIO
+name: CGC
 description: Here is my portfolio GitHub, nice to meet you!.
 show_downloads: false
 #logo: /assets/img/profile_img.jpeg
