--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: CG CENTENO - PORTFOLIO
-name: CGC
 description: Here is my portfolio GitHub, nice to meet you!.
+github: false
 show_downloads: false
-#logo: /assets/img/profile_img.jpeg
 google_analytics: true
 theme: jekyll-theme-cayman
