--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ description: Here is my portfolio GitHub, nice to meet you!.
 github: false
 show_downloads: false
 google_analytics: true
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
 include:
   - assets/css/style.css
