--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ google_analytics: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+#include:
+#  - assets/img/favicon.png
