--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CG CENTENO - PORTFOLIO
-description: Here is my portfolio GitHub, nice to meet you!.
+title: GITHUB PORTFOLIO
+description: Christian Gabriel Centeno
 github: false
 show_downloads: false
 google_analytics: true
