--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 include:
-  - assets/img/favicon.png
+  - assets/img/favicon.svg
